# spore-meta-example

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
include/spore/examples/: header.hpp
src/: main.cpp
